--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#"  target="_blank">사회혁신 A to Z 세부커리큘럼</a>
       </div> 
       <div class="item">
-      <a class="btn btn-primary1 btn-xl js-scroll-trigger" href="#" target="_blank">퍼실리테이터 양성교육 신청하기</a>
+      <a class="btn btn-primary1 btn-xl js-scroll-trigger" href="https://docs.google.com/forms/d/e/1FAIpQLSemGkCWfaL6q3WdkP66a9fJks80VOrY5AqanS0EhBA1y07Vbw/viewform" target="_blank">퍼실리테이터 양성교육 신청하기</a>
       <a class="btn btn-primary1 btn-xl js-scroll-trigger" href="#" target="_blank">퍼실리테이터 양성교육 세부커리큘럼</a>
       </div> 
        <div class="item">
