--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
     </div>
      <div class="item">
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://forms.gle/HzQf1E8rbPDGmquo7" target="_blank">사회혁신 A to Z 신청하기</a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1TB2LAJ-M1fA5Rjdrm0gkMis7Eqfx58Uk/view?usp=sharing"  target="_blank">사회혁신 A to Z 세부커리큘럼</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1TB2LAJ-M1fA5Rjdrm0gkMis7Eqfx58Uk/view?usp=sharing"  target="_blank">A to Z 세부커리큘럼</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1enU8R2LSp3zHCTOKuO7ad2x07asZsTPx/view?usp=sharing"  target="_blank">A to Z 포스터</a>     
       </div> 
       <div class="item">
       <a class="btn btn-primary1 btn-xl js-scroll-trigger" href="https://docs.google.com/forms/d/e/1FAIpQLSemGkCWfaL6q3WdkP66a9fJks80VOrY5AqanS0EhBA1y07Vbw/viewform" target="_blank">퍼실리테이터 양성교육 신청하기</a>
       <a class="btn btn-primary1 btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1YdUkIcY3TgLSuM9Oj-YeVJfZLRfz6XMR/view?usp=sharing" target="_blank">퍼실리테이터 양성교육 세부커리큘럼</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1eof8KQ97UcngUi8kUq4dV_PTM6zlaCQ7/view?usp=sharing"  target="_blank">퍼실리테이터 포스터</a> 
       </div> 
        <div class="item">
       <a class="btn btn-primary2 btn-xl js-scroll-trigger" href="https://pf.kakao.com/_xfpxiDj" target="_blank">문의 하기</a>
